--- a/pom.xml
+++ b/pom.xml
@@ -48,14 +48,14 @@
             </properties>
         </profile>
         <profile>
-            <id>windows</id>
+            <id>win</id>
             <activation>
                 <os>
                     <family>windows</family>
                 </os>
             </activation>
             <properties>
-                <platform>windows</platform>
+                <platform>win</platform>
             </properties>
         </profile>
         <profile>
