--- a/pom.xml
+++ b/pom.xml
@@ -66,19 +66,28 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>com.github.ArloL</groupId>
-						<artifactId>native-image-maven-plugin</artifactId>
-						<version>482856dfa2</version>
+						<groupId>org.graalvm.buildtools</groupId>
+						<artifactId>native-maven-plugin</artifactId>
 						<executions>
 							<execution>
+								<id>build-native</id>
 								<goals>
-									<goal>native-image</goal>
+									<goal>compile-no-fork</goal>
 								</goals>
 								<phase>package</phase>
+							</execution>
+							<execution>
+								<id>test-native</id>
+								<goals>
+									<goal>test</goal>
+								</goals>
 							</execution>
 						</executions>
 						<configuration>
 							<imageName>${project.artifactId}-${platform}-${project.version}</imageName>
+							<metadataRepository>
+								<enabled>true</enabled>
+							</metadataRepository>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -110,7 +119,7 @@
 					<mainClass>${start-class}</mainClass>
 				</configuration>
 			</plugin>
-            
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
