--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
 
 	<profiles>
 		<profile>
-			<id>mac</id>
+			<id>macos</id>
 			<activation>
 				<os>
 					<family>mac</family>
 				</os>
 			</activation>
 			<properties>
-				<platform>mac</platform>
+				<platform>macos</platform>
 			</properties>
 		</profile>
 		<profile>
@@ -46,14 +46,14 @@
 			</properties>
 		</profile>
 		<profile>
-			<id>win</id>
+			<id>windows</id>
 			<activation>
 				<os>
 					<family>windows</family>
 				</os>
 			</activation>
 			<properties>
-				<platform>win</platform>
+				<platform>windows</platform>
 			</properties>
 		</profile>
 		<profile>
