--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,26 @@
 
 	<groupId>io.github.arlol</groupId>
 	<artifactId>graalfx</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${revision}</version>
+
+	<scm>
+		<connection>scm:git:https://github.com/ArloL/graalfx</connection>
+		<developerConnection>scm:git:https://github.com/ArloL/graalfx</developerConnection>
+		<tag>${sha1}</tag>
+		<url>https://github.com/ArloL/graalfx</url>
+	</scm>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
 
 	<properties>
 		<java.version>17</java.version>
+		<sha1>HEAD</sha1>
+		<revision>0.0.1-SNAPSHOT</revision>
 		<platform>unknown</platform>
 		<start-class>io.github.arlol.graalfx.Launcher</start-class>
 		<javafx.version>21.0.1</javafx.version>
