--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -15,25 +15,6 @@
   "name":"com.sun.glass.ui.View"
 },
 {
-  "name":"com.sun.glass.ui.mac.MacApplication"
-},
-{
-  "name":"com.sun.glass.ui.mac.MacGestureSupport"
-},
-{
-  "name":"com.sun.glass.ui.mac.MacMenuBarDelegate"
-},
-{
-  "name":"com.sun.glass.ui.mac.MacPixels"
-},
-{
-  "name":"com.sun.glass.ui.mac.MacPlatformFactory",
-  "methods":[{"name":"<init>","parameterTypes":[] }]
-},
-{
-  "name":"com.sun.glass.ui.mac.MacView"
-},
-{
   "name":"com.sun.javafx.font.coretext.CTFactory",
   "methods":[{"name":"getFactory","parameterTypes":[] }]
 },
@@ -55,15 +36,10 @@
 },
 {
   "name":"com.sun.prism.GraphicsPipeline",
-  "methods":[{"name":"getFontFactory","parameterTypes":[] }, {"name":"getPipeline","parameterTypes":[] }]
-},
-{
-  "name":"com.sun.prism.es2.ES2Pipeline",
-  "methods":[{"name":"getInstance","parameterTypes":[] }]
-},
-{
-  "name":"com.sun.prism.es2.MacGLFactory",
-  "methods":[{"name":"<init>","parameterTypes":[] }]
+  "methods":[
+    {"name":"getFontFactory","parameterTypes":[] }, 
+    {"name":"getPipeline","parameterTypes":[] }
+  ]
 },
 {
   "name":"com.sun.prism.shader.FillPgram_Color_Loader",
@@ -98,14 +74,6 @@
 {
   "name":"java.nio.ByteOrder",
   "methods":[{"name":"nativeOrder","parameterTypes":[] }]
-},
-{
-  "name":"java.util.concurrent.atomic.AtomicBoolean",
-  "fields":[{"name":"value"}]
-},
-{
-  "name":"java.util.concurrent.atomic.AtomicReference",
-  "fields":[{"name":"value"}]
 },
 {
   "name":"javafx.scene.Camera"
