--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -133,8 +133,8 @@ jobs:
     - uses: gluonhq/setup-graalvm@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Remove WindowsImageHeapProviderFeature
-      run: '& 7z d "$env:JAVA_HOME\lib\svm\builder\svm.jar" com/oracle/svm/core/windows/WindowsImageHeapProviderFeature.class'
+    - uses: microsoft/setup-msbuild@v1.0.2
+    - uses: egor-tensin/vs-shell@v1
     - name: Build with Maven
       run: |
         .\mvnw --batch-mode -Dsha1="$env:GITHUB_SHA" -Drevision="$env:REVISION" verify gluonfx:build gluonfx:package
